--- a/front-webApp/timetable_page.html
+++ b/front-webApp/timetable_page.html
@@ -43,16 +43,17 @@
 
 					<!-- +버튼 클릭시 추가 창 띄움-->
 					<div id="collapseAdd" class="collapse p-0 md-1 col-12 col-xs-12 col-sm-12 col-lg-12 col-md-12">
-						<div id="topbar" class="card card-body lower-card">
+						<div id="topbar" class="card card-body card-plus">
 							<div class="list-group">
 
 								<button id="add-by-directly" class="btn p-1 btn-sm list-group-item" type="button" data-toggle="collapse" data-target="#collapseDirect" aria-expanded="false" aria-controls="collapseDirect">직접 추가하기</button>
-								<button type="button" id="add-by-searching" class="p-1 btn-sm list-group-item">검색하기</button>
+								<button id="add-by-searching" class="btn p-1 btn-sm list-group-item" type="button" data-toggle="collapse" data-target="#collapseSearching" aria-expanded="false" aria-controls="collapseSearching">검색하기</button>
 								<button type="button" id="btn-undo2" class="p-1 btn-sm list-group-item">취소하기</button>
 							</div>
 
+							<!-- 직접 추가하기 창 -->
 							<div class="collapse mt-1 form-add" id="collapseDirect">
-								<div class="card card-body upper-card p-2">
+								<div class="card card-body card-directly p-2">
 									<form>
 										<div class="form-group m-0">
 											<label for="subjectName" class="col-12 label">과목명</label>
@@ -104,7 +105,7 @@
 														<option value="">분</option> 
 														<option value="00">00</option> 
 														<option value="30">30</option> 
-													</select> 														
+													</select> 				
 												</div>
 												<label class="mx-auto time-label">종료시간</label>
 												<div class="mx-auto">
@@ -125,7 +126,7 @@
 														<option value="">분</option> 
 														<option value="00">00</option> 
 														<option value="30">30</option> 
-													</select> 									
+													</select> 		
 												</div>
 											</div>
 										</div>
@@ -140,115 +141,109 @@
 									</div>
 								</div>
 							</div>
+
+							<!-- 검색하기 창 -->
+							<div class="collapse mt-1 form-add" id="collapseSearching">
+							</div>
+
 						</div>
-						<div class="overlay col-12"></div>
 					</div>
 
 					<div id="timetable">
 					</div>
-
 				</div>
-
 				<!-- footer 하단바 class="app-footer" -->
 				<div id="footer">
 				</div>
-
 			</div>
 		</div>
-	</div>
-</body>
-</html> 
+	</body>
+	</html> 
 
-<script src="js/common/header.js"></script>
-<script src="js/common/timetable.js"></script>
-<script src="js/common/footer.js"></script>
+	<script src="js/common/header.js"></script>
+	<script src="js/common/timetable.js"></script>
+	<script src="js/common/footer.js"></script>
 
-<!-- table click event -->
-<script>
-	var table = document.getElementById("table"),rIndex,cIndex;
+	<!-- table click event -->
+	<script>
+		var table = document.getElementById("table"),rIndex,cIndex;
 
-	for(var i = 1 ; i < table.rows.length ; i++)
-	{
-		for(var j = 1 ; j<table.rows[i].cells.length ; j++){
-			table.rows[i].cells[j].onclick = function()
-			{
-				rIndex = this.parentElement.rowIndex;
-				cIndex = this.cellIndex;
-				console.log("ROW:" +rIndex+ ", Cell:" +cIndex);
+		for(var i = 1 ; i < table.rows.length ; i++)
+		{
+			for(var j = 1 ; j<table.rows[i].cells.length ; j++){
+				table.rows[i].cells[j].onclick = function()
+				{
+					rIndex = this.parentElement.rowIndex;
+					cIndex = this.cellIndex;
+					console.log("ROW:" +rIndex+ ", Cell:" +cIndex);
+				}
 			}
-		}
-	}	
-</script>
+		}	
+	</script>
 
-<!-- 취ㅗ하기 버튼 클릭 시 다시 창 닫기 -->
-<script type="text/javascript">
-	$('#btn-undo2').on('click', function () {
-		$('.upperbarCollapse').trigger('click');
-	});
+	<!-- 취소하기 버튼 클릭 시 다시 창 닫기 -->
+	<script type="text/javascript">
+		$('#btn-undo2').on('click', function () {
+			$('.upperbarCollapse').trigger('click');
+		});
 
-	$('#btn-undo1').on('click', function () {
-		$('#add-by-directly').trigger('click');
-	});
-</script>
-
-<!-- dropdown 선택 값 가져오기 -->
-<script type="text/javascript">
-	$('#btn-success').on('click', function () {
-		var shour = document.getElementById("sHour");
-		var val_shour = shour.options[shour.selectedIndex].value;
-		var sminute = document.getElementById("sMinute");
-		var val_sminute = sminute.options[sminute.selectedIndex].value;
-
-		var ehour = document.getElementById("eHour");
-		var val_ehour = ehour.options[ehour.selectedIndex].value;
-		var eminute = document.getElementById("eMinute");
-		var val_eminute = eminute.options[eminute.selectedIndex].value;
-
-		var day1 = document.getElementById("day1");
-		var val_day1 = day1.options[day1.selectedIndex].value;
-		var day2 = document.getElementById("day2");
-		var val_day2 = day2.options[day2.selectedIndex].value;
-
-		if(val_sminute == "30") {val_shour = (val_shour -8)*2;}
-		else if(val_sminute  == "00") {val_shour = (val_shour -8)*2-1;}
-
-		if(val_eminute == "30") {val_ehour = (val_ehour -8)*2;}
-		else if(val_eminute== "00") {val_ehour = (val_ehour -8)*2-1;}
-
-		//color random
-		//var random
-		for(i=val_shour ; i<=val_ehour ; i++){
-		if( i ==1 )
-			$('table tr:nth-child(1) td:nth-child(2)').css('background-color', 'red');
-		if( i ==2 )
-			$('table tr:nth-child(2) td:nth-child(2)').css('background-color', 'red');
-		if( i ==3 )
-			$('table tr:nth-child(3) td:nth-child(2)').css('background-color', 'red');
-		if( i ==4 )
-			$('table tr:nth-child(4) td:nth-child(2)').css('background-color', 'red');
-		if( i ==5 )
-			$('table tr:nth-child(5) td:nth-child(2)').css('background-color', 'red');
-		if( i ==6 )
-			$('table tr:nth-child(6) td:nth-child(2)').css('background-color', 'red');
-		if( i ==7 )
-			$('table tr:nth-child(7) td:nth-child(2)').css('background-color', 'red');
-		if( i ==8 )
-			$('table tr:nth-child(8) td:nth-child(2)').css('background-color', 'red');
-		if( i ==9 )
-			$('table tr:nth-child(9) td:nth-child(2)').css('background-color', 'red');
-		if( i ==10 )
-			$('table tr:nth-child(10) td:nth-child(2)').css('background-color', 'red');
-		if( i ==11 )
-			$('table tr:nth-child(11) td:nth-child(2)').css('background-color', 'red');
-		if( i ==12 )
-			$('table tr:nth-child(12) td:nth-child(2)').css('background-color', 'red');
-		if( i ==13 )
-			$('table tr:nth-child(13) td:nth-child(2)').css('background-color', 'red');
-		if( i ==14 )
-			$('table tr:nth-child(14) td:nth-child(2)').css('background-color', 'red');
-		}
-
-		$('#add-by-directly').trigger('click');
-			
+		$('#btn-undo1').on('click', function () {
+			$('#add-by-directly').trigger('click');
 		});
 	</script>
+
+	<!--select box 선택 값 가져오기 -->
+	<script type="text/javascript">
+		$('#btn-success').on('click', function () {
+			var shour = document.getElementById("sHour");
+			var val_shour = shour.options[shour.selectedIndex].value;
+			var sminute = document.getElementById("sMinute");
+			var val_sminute = sminute.options[sminute.selectedIndex].value;
+
+			var ehour = document.getElementById("eHour");
+			var val_ehour = ehour.options[ehour.selectedIndex].value;
+			var eminute = document.getElementById("eMinute");
+			var val_eminute = eminute.options[eminute.selectedIndex].value;
+
+			var day1 = document.getElementById("day1");
+			var val_day1 = day1.options[day1.selectedIndex].value;
+			var day2 = document.getElementById("day2");
+			var val_day2 = day2.options[day2.selectedIndex].value;
+			var index_day1,index_day2;
+
+			if(val_sminute == "30") {val_shour = (val_shour -8)*2;}
+			else if(val_sminute  == "00") {val_shour = (val_shour -8)*2-1;}
+
+			if(val_eminute == "30") {val_ehour = (val_ehour -8)*2;}
+			else if(val_eminute== "00") {val_ehour = (val_ehour -8)*2-1;}
+
+			switch(val_day1){
+				case 'mon': index_day1 = 1; break;
+				case 'tue': index_day1 = 2; break;
+				case 'wen': index_day1 = 3; break;
+				case 'thu': index_day1 = 4; break;
+				case 'fri': index_day1 = 5; break;
+			}
+			switch(val_day2){
+				case 'mon': index_day2 = 1; break;
+				case 'tue': index_day2 = 2; break;
+				case 'wen': index_day2 = 3; break;
+				case 'thu': index_day2 = 4; break;
+				case 'fri': index_day2 = 5; break;
+			}
+
+		//color random
+		var colorCode = "#"+Math.round(Math.random() * 0xFFFFFF).toString(16);
+
+		//paint time
+		for(i=val_shour ; i<val_ehour ; i++){
+			$( 'table tr:nth-child(' + i + ') td:eq(' + index_day1 + ')' ).css('background-color', colorCode);
+			$( 'table tr:nth-child(' + i + ') td:eq(' + index_day2 + ')' ).css('background-color', colorCode);
+		}
+		// select box value init
+		$('select').find("option:eq(0)").prop("selected", true);
+
+		$('#add-by-directly').trigger('click');
+	});
+		// 요일, 시간 중에 하나라도 선택하지 않으면 경고창 띄우기 
+</script>
