--- a/front-webApp/timetable_page.html
+++ b/front-webApp/timetable_page.html
@@ -164,27 +164,13 @@
 	<script src="js/common/timetable.js"></script>
 	<script src="js/common/footer.js"></script>
 
-	<!-- table click event -->
-	<script>
-		var table = document.getElementById("table"),rIndex,cIndex;
 
-		for(var i = 1 ; i < table.rows.length ; i++)
-		{
-			for(var j = 1 ; j<table.rows[i].cells.length ; j++){
-				table.rows[i].cells[j].onclick = function()
-				{
-					rIndex = this.parentElement.rowIndex;
-					cIndex = this.cellIndex;
-					console.log("ROW:" +rIndex+ ", Cell:" +cIndex);
-				}
-			}
-		}	
-	</script>
 
 	<!-- 취소하기 버튼 클릭 시 다시 창 닫기 -->
 	<script type="text/javascript">
 		$('#btn-undo2').on('click', function () {
 			$('.upperbarCollapse').trigger('click');
+			$('#add-by-directly').trigger('click');
 		});
 
 		$('#btn-undo1').on('click', function () {
@@ -193,7 +179,7 @@
 	</script>
 
 	<!--select box 선택 값 가져오기 -->
-	<script type="text/javascript">
+	<script>
 		$('#btn-success').on('click', function () {
 			var shour = document.getElementById("sHour");
 			var val_shour = shour.options[shour.selectedIndex].value;
@@ -210,6 +196,40 @@
 			var day2 = document.getElementById("day2");
 			var val_day2 = day2.options[day2.selectedIndex].value;
 			var index_day1,index_day2;
+
+			var table = document.getElementById("table"),rIndex,cIndex;
+			var row_length = table.rows.length;
+			var new_row_len = val_ehour;
+
+			//동적으로 테이블 조정
+			new_row_len = (new_row_len-8)*2;
+			if(val_eminute == '30')	new_row_len++;
+
+			if(row_length < new_row_len){
+				for(var i = row_length+1 ; i < new_row_len ; i++){
+					newRow = table.insertRow(table.length),
+					cell1 = newRow.insertCell(0),
+					cell2 = newRow.insertCell(1),
+					cell3 = newRow.insertCell(2),
+					cell4 = newRow.insertCell(3),
+					cell5 = newRow.insertCell(4),
+					cell6 = newRow.insertCell(5),
+		
+					time = (i%2 == 0 ?  (i/2)+8 : '' );
+					text = '#';
+
+					cell1.innerHTML = time;
+					cell2.innerHTML = cell3.innerHTML = cell4.innerHTML
+					 = cell5.innerHTML = cell6 .innerHTML = text;
+					if(i%2 == 0 )
+						$(newRow).addClass("stripe-top");
+						$(cell1).css("border-right","1px solid #e5e5e5");
+						$(cell2).css("border-right","1px solid #e5e5e5");
+						$(cell3).css("border-right","1px solid #e5e5e5");
+						$(cell4).css("border-right","1px solid #e5e5e5");
+						$(cell5).css("border-right","1px solid #e5e5e5");
+				}
+			}
 
 			if(val_sminute == "30") {val_shour = (val_shour -8)*2;}
 			else if(val_sminute  == "00") {val_shour = (val_shour -8)*2-1;}
@@ -232,18 +252,38 @@
 				case 'fri': index_day2 = 5; break;
 			}
 
-		//color random
-		var colorCode = "#"+Math.round(Math.random() * 0xFFFFFF).toString(16);
+			//color random
+			var colorCode = "#"+Math.round(Math.random() * 0xFFFFFF).toString(16);
 
-		//paint time
-		for(i=val_shour ; i<val_ehour ; i++){
-			$( 'table tr:nth-child(' + i + ') td:eq(' + index_day1 + ')' ).css('background-color', colorCode);
-			$( 'table tr:nth-child(' + i + ') td:eq(' + index_day2 + ')' ).css('background-color', colorCode);
-		}
-		// select box value init
-		$('select').find("option:eq(0)").prop("selected", true);
+			//paint time
+			for(i=val_shour ; i<val_ehour ; i++){
+				$( 'table tr:nth-child(' + i + ') td:eq(' + index_day1 + ')' ).css('background-color', colorCode);
+				$( 'table tr:nth-child(' + i + ') td:eq(' + index_day2 + ')' ).css('background-color', colorCode);
+			}
+			// select box value init
+			$('select').find("option:eq(0)").prop("selected", true);
 
-		$('#add-by-directly').trigger('click');
-	});
+			$('#add-by-directly').trigger('click');
+			$('.upperbarCollapse').trigger('click');
+		});
 		// 요일, 시간 중에 하나라도 선택하지 않으면 경고창 띄우기 
-</script>
+	</script>
+
+
+	<!-- table click event -->
+	<script>
+		var table = document.getElementById("table"),rIndex,cIndex;
+
+		$('#btn-success').on('click', function (){
+			for(var i = 1 ; i < table.rows.length ; i++){				
+				for(var j = 1 ; j<table.rows[i].cells.length ; j++){
+					table.rows[i].cells[j].onclick = function(){
+						rIndex = this.parentElement.rowIndex;
+						cIndex = this.cellIndex;
+
+						console.log("ROW:" +rIndex+ ", Cell:" +cIndex);
+					}
+				}
+			}	
+		});
+	</script>
