--- a/front-webApp/mypage.html
+++ b/front-webApp/mypage.html
@@ -33,8 +33,21 @@
 				</div>
 
 				<!-- 상단바와 하단바를 제외한 부분 class="main-area" -->
-				<div class="jumbotron p-md-3 text-white rounded main-area">
-					
+				<div class="jumbotron p-0 rounded main-area">
+					<div class="d-flex align-items-center p-3 my-3 rounded" style="background: #f2f2f2;">
+						<i class="fas fa-user m-3 user-icon"></i>
+						<div class="lh-100">
+							<h6 class="mb-0 lh-100 info">정주호(이름!!)</h6>
+							<small class="info">16011016(학번!!)</small>
+						</div>
+					</div>
+
+					<div class="list-group">
+						<button class="btn p-1 btn-sm list-group-item" type="button">정보 수정</button>
+						<button class="btn p-1 btn-sm list-group-item" type="button">비밀번호 변경</button>
+						<button type="button" class="p-1 btn-sm list-group-item">알림 끄기</button>
+						<button type="button" class="p-1 btn-sm list-group-item">탈퇴</button>
+					</div>
 				</div> 
 
 				<!-- footer 하단바 class="app-footer" -->
