--- a/front-webApp/timetable_page.html
+++ b/front-webApp/timetable_page.html
@@ -54,7 +54,7 @@
 							<!-- 직접 추가하기 창 -->
 							<div class="collapse mt-1 form-add" id="collapseDirect">
 								<div class="card card-body card-directly p-2">
-									<form>
+									<form class="commonForm">
 										<div class="form-group m-0">
 											<label for="subjectName" class="col-12 label">과목명</label>
 											<input type="text" class="form-control input"  id="subjectName">
@@ -181,6 +181,9 @@
 	<!--select box 선택 값 가져오기 -->
 	<script>
 		$('#btn-success').on('click', function () {
+
+			//if( !chkInput() ) return;
+
 			var shour = document.getElementById("sHour");
 			var val_shour = shour.options[shour.selectedIndex].value;
 			var sminute = document.getElementById("sMinute");
@@ -205,29 +208,28 @@
 			new_row_len = (new_row_len-8)*2;
 			if(val_eminute == '30')	new_row_len++;
 
+			var cell = new Array(); 
 			if(row_length < new_row_len){
 				for(var i = row_length+1 ; i < new_row_len ; i++){
 					newRow = table.insertRow(table.length),
-					cell1 = newRow.insertCell(0),
-					cell2 = newRow.insertCell(1),
-					cell3 = newRow.insertCell(2),
-					cell4 = newRow.insertCell(3),
-					cell5 = newRow.insertCell(4),
-					cell6 = newRow.insertCell(5),
-		
+					cell[0] = newRow.insertCell(0),
+					cell[1] = newRow.insertCell(1),
+					cell[2] = newRow.insertCell(2),
+					cell[3] = newRow.insertCell(3),
+					cell[4] = newRow.insertCell(4),
+					cell[5] = newRow.insertCell(5),
+
 					time = (i%2 == 0 ?  (i/2)+8 : '' );
 					text = '#';
 
-					cell1.innerHTML = time;
-					cell2.innerHTML = cell3.innerHTML = cell4.innerHTML
-					 = cell5.innerHTML = cell6 .innerHTML = text;
+					cell[0].innerHTML = time;
+					for(var j =1 ; j<6 ; j++)
+						cell[j].innerHTML = text;
+
 					if(i%2 == 0 )
 						$(newRow).addClass("stripe-top");
-						$(cell1).css("border-right","1px solid #e5e5e5");
-						$(cell2).css("border-right","1px solid #e5e5e5");
-						$(cell3).css("border-right","1px solid #e5e5e5");
-						$(cell4).css("border-right","1px solid #e5e5e5");
-						$(cell5).css("border-right","1px solid #e5e5e5");
+					for(var j=0 ; j<5 ; j++)
+						$(cell[j]).css("border-right","1px solid #e5e5e5");
 				}
 			}
 
@@ -237,19 +239,12 @@
 			if(val_eminute == "30") {val_ehour = (val_ehour -8)*2;}
 			else if(val_eminute== "00") {val_ehour = (val_ehour -8)*2-1;}
 
-			switch(val_day1){
-				case 'mon': index_day1 = 1; break;
-				case 'tue': index_day1 = 2; break;
-				case 'wen': index_day1 = 3; break;
-				case 'thu': index_day1 = 4; break;
-				case 'fri': index_day1 = 5; break;
-			}
-			switch(val_day2){
-				case 'mon': index_day2 = 1; break;
-				case 'tue': index_day2 = 2; break;
-				case 'wen': index_day2 = 3; break;
-				case 'thu': index_day2 = 4; break;
-				case 'fri': index_day2 = 5; break;
+			var days = ['mon','tue','wen','thu','fri'];
+			for(var i=0 ; i<5 ; i++){
+				if( days[i] == val_day1)
+					index_day1 = i+1;
+				if( days[i] == val_day2)
+					index_day2 = i+1;
 			}
 
 			//color random
@@ -266,11 +261,10 @@
 			$('#add-by-directly').trigger('click');
 			$('.upperbarCollapse').trigger('click');
 		});
-		// 요일, 시간 중에 하나라도 선택하지 않으면 경고창 띄우기 
 	</script>
 
 
-	<!-- table click event -->
+	<!-- 테이블 클릭 시 수정 -->
 	<script>
 		var table = document.getElementById("table"),rIndex,cIndex;
 
