--- a/front-webApp/join.html
+++ b/front-webApp/join.html
@@ -33,7 +33,7 @@
 							<h6> ID </h6>
 						</div>
 						<div class= "col-md-9 col-xs-9">
-							<input type="text"  class="form-control form-control-lg flat-input" id="id">
+							<input type="text"  class="form-control form-control-lg flat-input" title="ID" id="id">
 						</div>
 
 						<!--PW lable/input tag -->
@@ -41,7 +41,7 @@
 							<h6> PW </h6>
 						</div>
 						<div class= "col-md-9 col-xs-9">
-							<input type="password"  class="form-control form-control-lg flat-input" id = "pw">
+							<input type="password"  class="form-control form-control-lg flat-input" title="PW" id = "pw">
 						</div>
 
 						<!--NAME lable/input tag -->
@@ -49,14 +49,14 @@
 							<h6> NAME </h6>
 						</div>
 						<div class= "col-md-9 col-xs-9">
-							<input type="text"  class="form-control form-control-lg flat-input" id ="name">
+							<input type="text"  class="form-control form-control-lg flat-input" title="NAME"  id ="name">
 						</div>
 
 						<div class= "col-md-3 col-xs-3 label">
 							<h6> EMAIL </h6>
 						</div>
 						<div class= "col-md-9 col-xs-9">
-							<input type="text"  class="form-control form-control-lg flat-input" id ="email">
+							<input type="text"  class="form-control form-control-lg flat-input" title="EMAIL"  id ="email">
 						</div>
 
 						<!--GRADE lable/Dropdow tag -->
