--- a/front-webApp/index.html
+++ b/front-webApp/index.html
@@ -89,7 +89,7 @@
 
        $("#idSaveCheck").change(function(){ // 체크박스에 변화가 있다면,
            if($("#idSaveCheck").is(":checked")){ // ID 저장하기 체크했을 때,
-             console.log("check in remember me");
+             console.log("check in remember me");a
              var userInputId = $('#id').val();
                setCookie("userInputId", userInputId, 7); // 7일 동안 쿠키 보관
            }else{ // ID 저장하기 체크 해제 시,
@@ -101,12 +101,13 @@
        $('#submit').on('click',function(){
          setCookie("userInputId", userInputId, 7); // 7일 동안 쿠키 보관
          $.ajax({
-          url:"http://localhost:8090/user/checkUser",
+          url:"http://localhost:8090/user/checkUser.json",
           type : "GET",
           data : {'stuId':$('#id').val(), 'pw':$('#pw').val()},
           success : function(result){
            console.log(result);
-               if(result['result'] === '1'){ //로그인 성공
+           console.log(result["result"]);
+               if(result["result"] === "1"){ //로그인 성공
                 location.href = "home.html";
               }else{
                 alert('로그인 실패');
