--- a/front-webApp/find_subject.html
+++ b/front-webApp/find_subject.html
@@ -10,7 +10,7 @@
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 	<!-- Costumize CSS -->
-	<link rel="stylesheet" type="text/css" href="css/style_assignment_add.css">
+	<link rel="stylesheet" type="text/css" href="css/style_find_subject.css">
 
 	<!-- fontawesome 으로 icon 사용하기 -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
@@ -20,7 +20,7 @@
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
-
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 </head>
 
 
@@ -29,36 +29,75 @@
 	<div class="container" data-spy = "scroll">
 		<div class="row justify-content-md-center justify-content-xs-center">
 			<div class="col-md-6 col-md-auto col-xs-6 col-xs-auto login-box ">
-				<h1 class="text-center wdi-red">FIND!</h1>
+				<h1 class="text-center m-0 wdi-red">FIND!</h1>
 				<hr>
+				<div class="jumbotron p-0 rounded main-area">
 
-				<div class="form-row m-3">
-				<div class= "col-md-3 col-xs-3 mt-1 mb-1 label">
-					<h6> 과목명 </h6>
+					<div class="form-row m-3">
+						<div class= "col-md-3 col-xs-3 mt-1 mb-1 label">
+							과목명
+						</div>
+						<div class= "col-md-7 col-xs-7 ">
+							<input type="text"  class="form-control form-control-sm mt-1 mb-1 flat-input" id="subjectName">
+						</div>
+						<div class= "col-md-2 col-xs-2 mt-1 mb-1">
+							<a  class="btn btn-sm btn-icon" aria-label="Left Align">
+								<span class="fas fa-search" id="click"></span>
+							</a>
+						</div>
+						<table style="overflow:auto;" id="table_findSub" class="table table-borderless table-sm table-time">
+							<thead>
+								<tr>
+									<th class="text-center">#</th>
+									<th class="text-center" style="border-left: 1px solid #e5e5e5;">교수명</th>
+									<th class="text-center" style="border-left: 1px solid #e5e5e5;">과목명</th>
+								</tr>
+							</thead>
+							<tbody>
+							</tbody>
+						</table>
+					</div>
+
+					<div class= "col-md-12 col-xs-12" >
+						<a class="btn btn-lg btn-block btn-login" id = "submit" >
+						OK
+						</a>
+					</div>
+
 				</div>
-				<div class= "col-md-7 col-xs-7 ">
-					<input type="text"  class="form-control form-control-sm mt-1 mb-1 flat-input" id="subjectName">
-				</div>
-				<div class= "col-md-2 col-xs-2 mt-1 mb-1">
-					<a  class="btn btn-sm btn-icon" aria-label="Left Align">
-						<span class="fas fa-search" id="click"></span>
-					</a>
-				</div>
-			</div>
-
-			<div class= "col-md-12 col-xs-12" >
-				<a class="btn btn-lg btn-block btn-login" id = "submit" >
-					OK
-				</a>
-			</div>
-
-
 			</div>
 		</div>
 	</div>
 	<script type="text/javascript">
 	   $(document).ready(function(){
 	      $('#click').on('click',function(){ //입력한 과목명 가지고 선택할 수 있게 만들어야함.(subNum 받아야함!)
+					var checkList = [];
+					var findLen;
+
+					$.ajax({
+	      		url:"http://localhost:8090//subject/searchSubject.json",
+	      		type : "GET",
+	      		data : {'word':$('#subjectName').val()},
+	      		success : function(result){
+	               if(result['result'] === 'no data'){ //과목 검색 성공
+									alert('검색 실패');
+	               }else{
+	               	alert('검색 성공');
+									console.log(result);
+
+									console.log(result['result'][0]['subNo']);
+									console.log(result['result'].length);
+									findLen = result['result'].length;
+
+
+
+	               }
+	           },
+	           error : function(){
+	           	alert('검색 에러');
+	           }
+	       });
+
 
 	      });
 	   });
