--- a/phonegap_front_webApp/www/join.html
+++ b/phonegap_front_webApp/www/join.html
@@ -95,6 +95,7 @@
 				if( !chkInput() ) {
 					return;
 				}
+				event.preventDefault();
 
 				$.ajax({
 					url:"http://localhost:8090/user/insertUser.json",
