과제 등록, 보여주기 완료. id가 1인 사용자꺼 가져오는 걸로 임의로 지정했고 나중에 쿠키가져와서 id지정하면 됨!!

--- a/phonegap_front_webApp/www/join.html
+++ b/phonegap_front_webApp/www/join.html
@@ -100,8 +100,13 @@
 				$.ajax({
 					url:"http://localhost:8090/user/insertUser.json",
 					type : "GET",
-					data : {'stuId':$('#id').val(), 'pw':$('#pw').val(),'name':$('#name').val(),
-					'semester':$('#semester').val(), 'email':$('#email').val()},
+					data : {
+						'stuId':$('#id').val(),
+						'pw':$('#pw').val(),
+						'name':$('#name').val(),
+						'semester':$('#semester').val(),
+						'email':$('#email').val()
+					},
 					success : function(result){
 						console.log(result);
 
