--- a/phonegap_front_webApp/www/assignment.html
+++ b/phonegap_front_webApp/www/assignment.html
@@ -16,7 +16,7 @@
 
 	<!-- Optional JavaScript -->
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
 </head>
@@ -60,27 +60,24 @@
 					<div style="overflow:auto; width:auto; height:300px;" class="mt-3 assignment-all scrollbar scrollbar-track scrollbar-thumb" data-offset="0">
 
 						<!-- 스크롤바 제외한 과제들 보여주는 영역 -->
-						<div class="px-2">
+						<div id="showAssign" class="px-2">
 
 							<!-- Button trigger modal -->
-							<button id="popbutton_assignment" type="button" class="btn btn-lg btn-block btn-outline-danger">
-								<h6 id="one" style="font-weight: bold" class="mb-2">-과제 제목</h6>
-								<p6>과제 내용</p6>	
-							</button>
+
 							<!-- Modal -->
 							<div class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
 								<div class="modal-dialog modal-dialog-centered modal-sm" role="document">
 									<div class="modal-content">
 										<div class="modal-header">
-											<h5 class="modal-title"> 과제 제목 </h5>
+											<h5 class="modal-title"> </h5>
 											<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 												<span aria-hidden="true">&times;</span>
 											</button>
 										</div>
 										<div class="modal-body">
-											과제 내용
+											
 										</div>
-										<!-- modal의 버튼들 -->
+										
 										<div class="modal-footer">
 											<a class="btn btn-sm btn-primary " aria-label="Left Align" href="assignment_add.html">Change</a>
 											<button type="button" class="btn btn-sm btn-danger" data-dismiss="modal">Close</button>
@@ -89,12 +86,8 @@
 									</div>
 								</div>
 							</div>
-
 						</div>
-
-
 					</div>
-
 				</div>
 
 				<!-- footer 하단바 class="app-footer" -->
@@ -110,10 +103,54 @@
 <!-- modal -->
 <script type="text/javascript">
 	$(function(){
-		$("#popbutton_assignment").click(function(){
+		$(document).on("click",'.popbutton_assignment',function() { 
+
 			$('div.modal').modal();
-		})	
+
+		}); 
+
 	})
+</script>
+
+<!-- 화면에 과제 표시 -->
+<script type="text/javascript">
+	$(document).ready(function(){
+
+		$.ajax({
+			url:"http://localhost:8090/homework/selectHomework.json",
+			type : "GET",
+			data : {
+				'stuId':'1',
+				'select':1,
+			},
+			success : function(result){
+				if(result['result'] === 'no data'){ 
+					alert('불러오기 실패');
+				}else{
+					alert('불러오기 성공');
+					console.log(result);	
+
+
+					for(var i=0 ; i<result['result'].length ; i++){
+
+						var assign_title = result['result'][i]['title'];
+						var assign_contents = result['result'][i]['contents'];
+
+						var str = '';
+						str += '<button type="button" class="btn btn-lg btn-block btn-outline-danger popbutton_assignment"> ';
+						str += '<h6 id="assign'+(i+1)+'_title" style="font-weight: bold" class="mb-2">-'+ assign_title +'</h6>';
+						str += '<p6 id="assign'+(i+1)+'_context">'+assign_contents+'</p6>';
+						str += '</button>';
+						$('#showAssign').append(str);
+					}
+				}
+
+			},
+			error : function(){
+				alert('불러오기 에러');
+			}
+		});
+	});
 </script>
 
 <script src="js/common/header.js"></script>
