--- a/phonegap_front_webApp/www/assignment_add.html
+++ b/phonegap_front_webApp/www/assignment_add.html
@@ -141,17 +141,25 @@ star-input>.input.focus{outline:1px dotted #ddd;}
 	$(document).ready(function(){
 		$('#submit').on('click',function(){
 
-			// if( !chkInput() ) return;
+			if( !chkInput() ) return;
+
+			event.preventDefault();
 
 			var radioVal = $('input[name="star-input"]:checked').val();
 			var due = $('#dueDate').val();
-
+			
 			$.ajax({
 				url:"http://localhost:8090/homework/insertHomework.json",
 				type : "GET",
-				data : {'stuId':'1','importance':radioVal,'dueDate':due,
-				'title':$('#title').val(), 'contents':$('#contents').val()
-				,'success':0, 'subNo':'111'},
+				data : {
+					'stuId':'1',
+					'importance':radioVal,
+					'dueDate':due,
+					'title':$('#title').val(),
+					'contents':$('#contents').val(),
+					'success':0,
+					'subNo':'111'
+				},
 				success : function(result){
 					console.log(result);
 	               if(result['result'] === '1'){ //과제 등록 성공
