--- a/phonegap_front_webApp/www/find_subject.html
+++ b/phonegap_front_webApp/www/find_subject.html
@@ -80,7 +80,7 @@
 
 	      	event.preventDefault();
 	      	$.ajax({
-	      		url:"http://localhost:8090/subject/searchSubject.json",
+	      		url:"http://localhost:8090/subject/searchSubject.json]",
 
 	      		type : "GET",
 	      		data : {'word':$('#subjectName').val()},
