체크박스 추가하는거 만들어야함

--- a/phonegap_front_webApp/www/find_subject.html
+++ b/phonegap_front_webApp/www/find_subject.html
@@ -109,7 +109,7 @@
 	               		cell[2] = newRow.insertCell(2),
 	               		cell[3] = newRow.insertCell(3),
 
-
+										cell[0].type = checkbox;
 										cell[1].innerHTML = i+1;
 	               		cell[2].innerHTML = result['result'][i]['subNo'];
 	               		cell[3].innerHTML = result['result'][i]['profName'];
