--- a/phonegap_front_webApp/www/find_subject.html
+++ b/phonegap_front_webApp/www/find_subject.html
@@ -45,7 +45,7 @@
 								<span class="fas fa-search" id="click"></span>
 							</a>
 						</div>
-							<table style="overflow:auto;" id="table_findSub" class="table table-borderless table-sm table-time">
+						<table style="overflow:auto;" id="table_findSub" class="table table-borderless table-sm table-time">
 							<colgroup>
 								<col width="10%"/>
 								<col width="20%"/>
@@ -54,8 +54,8 @@
 							</colgroup>
 							<thead>
 								<tr>
-									<th class="text-center" style="border-left: 1px solid #e5e5e5;">CK</th>
-									<th class="text-center">NO</th>
+									<th class="text-center">CK</th>
+									<th class="text-center" style="border-left: 1px solid #e5e5e5;">NO</th>
 									<th class="text-center" style="border-left: 1px solid #e5e5e5;">학수번호</th>
 									<th class="text-center" style="border-left: 1px solid #e5e5e5;">교수명</th>
 								</tr>
@@ -75,83 +75,98 @@
 		</div>
 	</div>
 	<script type="text/javascript">
-		$(document).ready(function(){
-	      $('#click').on('click',function(){ //입력한 과목명 가지고 선택할 수 있게 만들어야함.(subNum 받아야함!)
-	      	var checkList = [];
+		$(document).ready(function(){	
+	     	$('#click').on('click',function(){ //입력한 과목명 가지고 선택할 수 있게 만들어야함.(subNum 받아야함!)
+	   		   	var checkList = [];
 
-	      	$( '#table_findSub > tbody').empty();
+	      		$( '#table_findSub > tbody').empty();
 
-	      	event.preventDefault();
-	      	$.ajax({
-	      		url:"http://localhost:8090//subject/searchSubject.json",
-	      		type : "GET",
-	      		data : {'word':$('#subjectName').val()},
-	      		success : function(result){
-	               if(result['result'] === 'no data'){ //과목 검색 성공
-	               	alert('검색 실패');
-	               }else{
-	               	alert('검색 성공');
-	               	console.log(result);
+	      		event.preventDefault();
+				$.ajax({
+	      			url:"http://localhost:8090//subject/searchSubject.json",
+	      			type : "GET",
+	      			data : {'word':$('#subjectName').val()},
+	      			success : function(result){
+	               		if(result['result'] === 'no data'){ //과목 검색 성공
+	               			alert('검색 실패');
+	               		}else{
+	               			alert('검색 성공');
+	               			console.log(result);
 
-	               	console.log(result['result'][0]['subNo']);
-	               	console.log(result['result'].length);
+	               			console.log(result['result'][0]['subNo']);
+	               			console.log(result['result'].length);
+					
+	               			var	tableLen = result['result'].length;
+	               			var table = document.getElementById("table_findSub"),rIndex,cIndex;
 
-	               	var	tableLen = result['result'].length;
-	               	var table = document.getElementById("table_findSub"),rIndex,cIndex;
+	               			var cell = new Array();
+	             	  		for(var i=0 ; i <tableLen ; i++){
+	               				newRow = table.insertRow(table.length),
+	               				cell[0] = newRow.insertCell(0),
+	               				cell[1] = newRow.insertCell(1),
+	               				cell[2] = newRow.insertCell(2),
+	               				cell[3] = newRow.insertCell(3),
 
+	               				cell[0].innerHTML = '<input type="radio" name="select">';
+	               				cell[1].innerHTML = i+1;
+	               				cell[2].innerHTML = result['result'][i]['subNo'];
+	               				cell[3].innerHTML = result['result'][i]['profName'];
 
-									var cell = new Array();
-	               	for(var i=0 ; i <tableLen ; i++){
-	               		newRow = table.insertRow(table.length),
-										//newRow.innerHTML = "<tr>",
-										cell[0] = newRow.insertCell(0),
-	               		cell[1] = newRow.insertCell(1),
-	               		cell[2] = newRow.insertCell(2),
-	               		cell[3] = newRow.insertCell(3),
+	              	 			$(newRow).addClass("stripe-top");
+	               				for(var j=0 ; j<3 ; j++)
+	               					$(cell[j]).css("border-right","1px solid #e5e5e5");	
+	             	  		}
 
-										cell[0].type = checkbox;
-										cell[1].innerHTML = i+1;
-	               		cell[2].innerHTML = result['result'][i]['subNo'];
-	               		cell[3].innerHTML = result['result'][i]['profName'];
-										//newRow.innerHTML = "</tr>";
+	             		}
+	         	  	},
+	          	 	error : function(){
+	           			alert('검색 에러');
+	          	 	}
+	      		});
 
-	               		$(newRow).addClass("stripe-top");
-	               		for(var j=0 ; j<2 ; j++)
-	               			$(cell[j]).css("border-right","1px solid #e5e5e5");
-	               	}
+				//  $('.stripe-top').click(function(){
+				// 	// 현재 클릭된 Row(<tr>)
+				// 	var tr = $(this);
+				// 	console.log(tr);
+				// 	var td = tr.children();
+				// 	var children = td.find('tr');
+				// 	console.log(td);
 
-	               }
-	           },
-	           error : function(){
-	           	alert('검색 에러');
-	           }
-	       });
-
-				 $('#submit').on('click',function(){ //입력한 과목명 가지고 선택할 수 있게 만들어야함.(subNum 받아야함!)
- 	      		$.ajax({
-							type : "post",
-							url : "assignment_add.html",
-							success : function(result){
-								console.log(result);
-								$('#subNo').html(result);
-							}
-						})
-	      });
-
-				$('.stripe-top').click(function(){
-					// 현재 클릭된 Row(<tr>)
-					var tr = $(this);
-					console.log(tr);
-					var td = tr.children();
-					var children = td.find('tr');
-					console.log(td);
-
-					// td.eq(index)를 통해 값을 가져올 수도 있다.
-					No = children.children();
-					console.log(No);
+				// 	// td.eq(index)를 통해 값을 가져올 수도 있다.
+				// 	No = children.children();
+				// 	console.log(No);
+				// });
 			});
-	  });
-	});
+	  	});
+	</script>
+	<script type="text/javascript">
+		$('#submit').on('click',function(){ //입력한 과목명 가지고 선택할 수 있게 만들어야함.(subNum 받아야함!)
+		 	$.ajax({
+		 		type : "post",
+		 		url : "assignment_add.html",
+		 		success : function(result){
+		 			console.log(result);
+		 			$('#subNo').html(result);
+		 		}
+		 	})
+		});
+
+		//테이블 클릭하면 행,열의 인덱스 찍어줌
+		var table = document.getElementById("table_findSub"),rIndex,cIndex;
+		
+		$('#table_findSub').on('click', function (){
+			for(var i = 1 ; i < table.rows.length ; i++){				
+				for(var j = 0 ; j<table.rows[i].cells.length ; j++){
+					table.rows[i].cells[j].onclick = function(){
+						rIndex = this.parentElement.rowIndex;
+						cIndex = this.cellIndex;
+
+						console.log("ROW:" +rIndex+ ", Cell:" +cIndex);
+					}
+				}
+			}	
+		});
+		
 	</script>
 </body>
 </html>
