--- a/phonegap_front_webApp/www/find_subject.html
+++ b/phonegap_front_webApp/www/find_subject.html
@@ -48,15 +48,17 @@
 						<table style="overflow:auto;" id="table_findSub" class="table table-borderless table-sm table-time">
 							<colgroup>
 								<col width="10%"/>
-								<col width="20%"/>
-								<col width="40%"/>
+								<col width="10%"/>
+								<col width="25%"/>
+								<col width="25%"/>
 								<col width="30%"/>
 							</colgroup>
 							<thead>
 								<tr>
 									<th class="text-center">CK</th>
 									<th class="text-center" style="border-left: 1px solid #e5e5e5;">NO</th>
-									<th class="text-center" style="border-left: 1px solid #e5e5e5;">학수번호</th>
+									<th class="text-center" style="border-left: 1px solid #e5e5e5;">시간</th>
+									<th class="text-center" style="border-left: 1px solid #e5e5e5;">장소</th>
 									<th class="text-center" style="border-left: 1px solid #e5e5e5;">교수명</th>
 								</tr>
 							</thead>
@@ -75,7 +77,7 @@
 		</div>
 	</div>
 	<script type="text/javascript">
-		$(document).ready(function(){	
+		$(document).ready(function(){
 	     	$('#click').on('click',function(){ //입력한 과목명 가지고 선택할 수 있게 만들어야함.(subNum 받아야함!)
 	   		   	var checkList = [];
 
@@ -95,7 +97,7 @@
 
 	               			console.log(result['result'][0]['subNo']);
 	               			console.log(result['result'].length);
-					
+
 	               			var	tableLen = result['result'].length;
 	               			var table = document.getElementById("table_findSub"),rIndex,cIndex;
 
@@ -106,15 +108,17 @@
 	               				cell[1] = newRow.insertCell(1),
 	               				cell[2] = newRow.insertCell(2),
 	               				cell[3] = newRow.insertCell(3),
+												cell[4] = newRow.insertCell(3),
 
 	               				cell[0].innerHTML = '<input type="radio" name="select">';
 	               				cell[1].innerHTML = i+1;
-	               				cell[2].innerHTML = result['result'][i]['subNo'];
-	               				cell[3].innerHTML = result['result'][i]['profName'];
+	               				cell[2].innerHTML = result['result'][i]['startHour'];
+												cell[3].innerHTML = result['result'][i]['classRoom'];
+	               				cell[4].innerHTML = result['result'][i]['profName'];
 
 	              	 			$(newRow).addClass("stripe-top");
 	               				for(var j=0 ; j<3 ; j++)
-	               					$(cell[j]).css("border-right","1px solid #e5e5e5");	
+	               					$(cell[j]).css("border-right","1px solid #e5e5e5");
 	             	  		}
 
 	             		}
@@ -153,20 +157,25 @@
 
 		//테이블 클릭하면 행,열의 인덱스 찍어줌
 		var table = document.getElementById("table_findSub"),rIndex,cIndex;
-		
+
 		$('#table_findSub').on('click', function (){
-			for(var i = 1 ; i < table.rows.length ; i++){				
+			for(var i = 1 ; i < table.rows.length ; i++){
 				for(var j = 0 ; j<table.rows[i].cells.length ; j++){
 					table.rows[i].cells[j].onclick = function(){
 						rIndex = this.parentElement.rowIndex;
 						cIndex = this.cellIndex;
 
+						//내가 하려는게 행 누르면 checkbox 위치도 바뀔수 있게!!!!!
+
+						//table.rows[rIndex].cells[0].innerHTML = checked;
+						//table.rows[rIndex].cells[0].checked();
+						//console.log(table.rows[rIndex].cells[0].innerHTML);
 						console.log("ROW:" +rIndex+ ", Cell:" +cIndex);
 					}
 				}
-			}	
+			}
 		});
-		
+
 	</script>
 </body>
 </html>
